# arkmod

./: .gitignore  README.md  pyproject.toml
docs/: settings.json
src/arkmod/: __main__.py  arkmod.py  console.py  gitcommands.py  gitinstance.py  pyinstaller.py  umap.py  vcs.py
src/arkmod/vcs/: __init__.py  arkconfig.py  gitcommands.py  gitinfo.py  gittransaction.py  moddb.py  vcs.py
tests/: test_gitcommands.py
